[gd_scene load_steps=7 format=3 uid="uid://integrated_composer_001"]

[ext_resource type="Script" path="res://scripts/ui/integrated_composer.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/ui/note_inventory_ui.gd" id="2_inventory"]
[ext_resource type="Script" path="res://scripts/ui/sequencer_ui.gd" id="3_sequencer"]
[ext_resource type="Script" path="res://scripts/ui/manual_slot_config_v3.gd" id="4_manual"]
[ext_resource type="Script" path="res://scripts/ui/chord_alchemy_panel_v3.gd" id="5_alchemy"]
[ext_resource type="Script" path="res://scripts/ui/spellbook_panel_v3.gd" id="6_spellbook"]

[node name="IntegratedComposer" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_main")

[node name="BackgroundPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxRoot" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 2

[node name="HeaderBar" type="HBoxContainer" parent="BackgroundPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="BackgroundPanel/HeaderBar"]
layout_mode = 2
text = "一体化编曲台  INTEGRATED COMPOSER"
horizontal_alignment = 0
size_flags_horizontal = 3

[node name="BPMLabel" type="Label" parent="BackgroundPanel/HeaderBar"]
layout_mode = 2
text = "BPM: 120"
horizontal_alignment = 2

[node name="CloseButton" type="Button" parent="BackgroundPanel/HeaderBar"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "关闭 [Tab]"

[node name="MainLayout" type="HBoxContainer" parent="BackgroundPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="BackgroundPanel/MainLayout"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.2

[node name="LeftTitle" type="Label" parent="BackgroundPanel/MainLayout/LeftPanel"]
layout_mode = 2
text = "音符库存"
horizontal_alignment = 1

[node name="NoteInventoryPanel" type="Control" parent="BackgroundPanel/MainLayout/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_inventory")

[node name="CenterPanel" type="VBoxContainer" parent="BackgroundPanel/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="CenterTitle" type="Label" parent="BackgroundPanel/MainLayout/CenterPanel"]
layout_mode = 2
text = "序列器 & 手动施法"
horizontal_alignment = 1

[node name="SequencerGrid" type="Control" parent="BackgroundPanel/MainLayout/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.65
script = ExtResource("3_sequencer")

[node name="ManualSlotsPanel" type="Control" parent="BackgroundPanel/MainLayout/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35
script = ExtResource("4_manual")

[node name="RightPanel" type="VBoxContainer" parent="BackgroundPanel/MainLayout"]
layout_mode = 2
custom_minimum_size = Vector2(280, 0)
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.3

[node name="ChordAlchemyPanel" type="Control" parent="BackgroundPanel/MainLayout/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
script = ExtResource("5_alchemy")

[node name="SpellbookPanel" type="Control" parent="BackgroundPanel/MainLayout/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.55
script = ExtResource("6_spellbook")

[node name="InfoBar" type="PanelContainer" parent="BackgroundPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
size_flags_vertical = 8

[node name="InfoLabel" type="RichTextLabel" parent="BackgroundPanel/InfoBar"]
layout_mode = 2
bbcode_enabled = true
text = "悬停任意元素查看详细信息  |  Tab: 关闭  |  Ctrl+Z/Y: 撤销/重做"
fit_content = true
